--- a/Trembo_Store_PI/src/main/resources/application.properties
+++ b/Trembo_Store_PI/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql:///${MYSQL_HOST:localhost}:3306/BD_Trembo_Store
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=3045
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
