--- a/Trembo_Store_PI/src/main/resources/application.properties
+++ b/Trembo_Store_PI/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-server.port=8080
-
-spring.datasource.url=jdbc:mysql:///${MYSQL_HOST:localhost}:3306/BD_Trembo_Store
-spring.datasource.driverClassName=org.h2.Driver
+spring.application.name=trembostore
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bd_trembostore
 spring.datasource.username=root
 spring.datasource.password=3045
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+
